<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signin">SIGNIN</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="signup">SignUp</string>
    <string name="enter_here">Enter Here</string>
    <string name="result">Result</string>
    <string name="ans">ANS</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
</resources>
